--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -5128,6 +5128,7 @@
    "ipa" : {
       "mime_type" : "application/x-itunes-ipa",
       "mime_types" : {
+         "application/octet-stream" : 1,
          "application/x-itunes-ipa" : 1
       }
    },
@@ -6665,7 +6666,6 @@
       "mime_type" : "text/markdown",
       "mime_types" : {
          "text/markdown" : 1,
-         "text/plain" : 1,
          "text/x-markdown" : 1
       }
    },
@@ -6790,7 +6790,6 @@
       "mime_type" : "text/markdown",
       "mime_types" : {
          "text/markdown" : 1,
-         "text/plain" : 1,
          "text/x-markdown" : 1
       }
    },
@@ -7050,9 +7049,13 @@
       }
    },
    "mjs" : {
-      "mime_type" : "application/javascript",
+      "mime_type" : "text/javascript",
       "mime_types" : {
-         "application/javascript" : 1
+         "application/ecmascript" : 1,
+         "application/javascript" : 1,
+         "application/x-javascript" : 1,
+         "text/ecmascript" : 1,
+         "text/javascript" : 1
       }
    },
    "mk" : {
@@ -7076,8 +7079,9 @@
       }
    },
    "mkd" : {
-      "mime_type" : "text/x-markdown",
+      "mime_type" : "text/markdown",
       "mime_types" : {
+         "text/markdown" : 1,
          "text/x-markdown" : 1
       }
    },
