--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -4435,6 +4435,30 @@
          "application/vnd.mentor_graphics.hdl_author.project_file" : 1
       }
    },
+   "heic" : {
+      "mime_type" : "image/heic",
+      "mime_types" : {
+         "image/heic" : 1
+      }
+   },
+   "heics" : {
+      "mime_type" : "image/heic-sequence",
+      "mime_types" : {
+         "image/heic-sequence" : 1
+      }
+   },
+   "heif" : {
+      "mime_type" : "image/heif",
+      "mime_types" : {
+         "image/heif" : 1
+      }
+   },
+   "heifs" : {
+      "mime_type" : "image/heif-sequence",
+      "mime_types" : {
+         "image/heif-sequence" : 1
+      }
+   },
    "heldxml" : {
       "mime_type" : "application/held\u002Bxml",
       "mime_types" : {
