--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -8961,8 +8961,9 @@
       }
    },
    "pem" : {
-      "mime_type" : "application/x-x509-ca-cert",
+      "mime_type" : "application/pem-certificate-chain",
       "mime_types" : {
+         "application/pem-certificate-chain" : 1,
          "application/x-x509-ca-cert" : 1
       }
    },
