--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -8066,6 +8066,12 @@
          "image/vnd.net-fpx" : 1
       }
    },
+   "nq" : {
+      "mime_type" : "application/n-quads",
+      "mime_types" : {
+         "application/n-quads" : 1
+      }
+   },
    "nsc" : {
       "mime_type" : "video/x-ms-asf",
       "mime_types" : {
@@ -8084,6 +8090,12 @@
       "mime_type" : "video/x-nsv",
       "mime_types" : {
          "video/x-nsv" : 1
+      }
+   },
+   "nt" : {
+      "mime_type" : "application/n-triples",
+      "mime_types" : {
+         "application/n-triples" : 1
       }
    },
    "ntf" : {
