--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -93,6 +93,12 @@
          "video/3gpp2" : 1
       }
    },
+   "3mf" : {
+      "mime_type" : "model/3mf",
+      "mime_types" : {
+         "model/3mf" : 1
+      }
+   },
    "4th" : {
       "mime_type" : "text/x-forth",
       "mime_types" : {
@@ -2829,6 +2835,12 @@
          "application/x-dvi" : 1
       }
    },
+   "dwd" : {
+      "mime_type" : "application/atsc-dwd\u002Bxml",
+      "mime_types" : {
+         "application/atsc-dwd\u002Bxml" : 1
+      }
+   },
    "dwf" : {
       "mime_type" : "model/vnd.dwf",
       "mime_types" : {
@@ -4459,6 +4471,12 @@
          "image/heif-sequence" : 1
       }
    },
+   "held" : {
+      "mime_type" : "application/atsc-held\u002Bxml",
+      "mime_types" : {
+         "application/atsc-held\u002Bxml" : 1
+      }
+   },
    "heldxml" : {
       "mime_type" : "application/held\u002Bxml",
       "mime_types" : {
@@ -5760,6 +5778,12 @@
          "application/jwc" : 1
       }
    },
+   "jxr" : {
+      "mime_type" : "image/jxr",
+      "mime_types" : {
+         "image/jxr" : 1
+      }
+   },
    "jxw" : {
       "mime_type" : "application/jxw",
       "mime_types" : {
@@ -6628,6 +6652,12 @@
          "application/mads\u002Bxml" : 1
       }
    },
+   "maei" : {
+      "mime_type" : "application/mmt-aei\u002Bxml",
+      "mime_types" : {
+         "application/mmt-aei\u002Bxml" : 1
+      }
+   },
    "mag" : {
       "mime_type" : "application/vnd.ecowin.chart",
       "mime_types" : {
@@ -6880,9 +6910,10 @@
       }
    },
    "mdx" : {
-      "mime_type" : "application/x-mediadesc",
+      "mime_type" : "text/mdx",
       "mime_types" : {
-         "application/x-mediadesc" : 1
+         "application/x-mediadesc" : 1,
+         "text/mdx" : 1
       }
    },
    "me" : {
@@ -7075,10 +7106,8 @@
    "mjs" : {
       "mime_type" : "text/javascript",
       "mime_types" : {
-         "application/ecmascript" : 1,
          "application/javascript" : 1,
          "application/x-javascript" : 1,
-         "text/ecmascript" : 1,
          "text/javascript" : 1
       }
    },
@@ -8293,6 +8322,12 @@
          "audio/x-vorbis\u002Bogg" : 1
       }
    },
+   "ogex" : {
+      "mime_type" : "model/vnd.opengex",
+      "mime_types" : {
+         "model/vnd.opengex" : 1
+      }
+   },
    "ogg" : {
       "mime_type" : "application/ogg",
       "mime_types" : {
@@ -8973,9 +9008,8 @@
       }
    },
    "pem" : {
-      "mime_type" : "application/pem-certificate-chain",
+      "mime_type" : "application/x-x509-ca-cert",
       "mime_types" : {
-         "application/pem-certificate-chain" : 1,
          "application/x-x509-ca-cert" : 1
       }
    },
@@ -10601,6 +10635,12 @@
          "application/rls-services\u002Bxml" : 1
       }
    },
+   "rsat" : {
+      "mime_type" : "application/atsc-rsat\u002Bxml",
+      "mime_types" : {
+         "application/atsc-rsat\u002Bxml" : 1
+      }
+   },
    "rsd" : {
       "mime_type" : "application/rsd\u002Bxml",
       "mime_types" : {
@@ -11296,6 +11336,12 @@
          "audio/prs.sid" : 1,
          "audio/x-psid" : 1,
          "image/x-mrsid-image" : 1
+      }
+   },
+   "sieve" : {
+      "mime_type" : "application/sieve",
+      "mime_types" : {
+         "application/sieve" : 1
       }
    },
    "sig" : {
@@ -12017,13 +12063,14 @@
       }
    },
    "stl" : {
-      "mime_type" : "application/sla",
+      "mime_type" : "model/stl",
       "mime_types" : {
          "application/sla" : 1,
          "application/vnd.ms-pki.stl" : 1,
          "application/vnd.ms-pkistl" : 1,
          "application/x-navistyle" : 1,
-         "application/x-sla" : 1
+         "application/x-sla" : 1,
+         "model/stl" : 1
       }
    },
    "stm" : {
@@ -13180,6 +13227,12 @@
       "mime_type" : "text/uri-list",
       "mime_types" : {
          "text/uri-list" : 1
+      }
+   },
+   "usdz" : {
+      "mime_type" : "model/vnd.usdz\u002Bzip",
+      "mime_types" : {
+         "model/vnd.usdz\u002Bzip" : 1
       }
    },
    "user" : {
@@ -14691,10 +14744,11 @@
       }
    },
    "x3db" : {
-      "mime_type" : "model/x3d\u002Bbinary",
+      "mime_type" : "model/x3d\u002Bfastinfoset",
       "mime_types" : {
          "model/x-x3d\u002Bbinary" : 1,
-         "model/x3d\u002Bbinary" : 1
+         "model/x3d\u002Bbinary" : 1,
+         "model/x3d\u002Bfastinfoset" : 1
       }
    },
    "x3dbz" : {
