--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,41 @@
-git:
-  submodules: false
-language: perl
-before_install: git submodule update --init
-install: "make test-deps"
-script: "make test"
-notifications:
-  email:
-    - wakaba@suikawiki.org
-  irc:
-    channels:
-      - "ircs://irc.suikawiki.org:6697#mechanize"
-    use_notice: true
-env:
-  global:
-    secure: "YKsGunVUaTE2cgEMRU643mZQ38m/h0vGweg/h8+koGgJf1Eu8R5OakYrtkjQkY93ARPYadhDtYwhbXX63PPmVvpJrcOZtVLktdLc84kfB4DA4Xt+KclPmPWO1fUmDSgY8fhZ4qx0xDcRDdDyNQ7rwW6+KGhCoDeMK/Y9JxBZkys="
-after_success:
-  - curl https://gist.githubusercontent.com/wakaba/9970857/raw/travis-merger.pl | perl
+{
+   "before_install" : "true",
+   "env" : {
+      "global" : {
+         "secure" : "PrkoGNLqv9r92/XvdwMOfFYtTSb28HlPYQjmQ7M54mJMYghmL\u002B4ir2F9Hyqn8DWOsSeBmwfOg/3kQsM8Uaj3CEgn1nYQ8q0PwZdSwAFM09hi8byLMCSwC4\u002B4yzu9enqdU4MVVSUjR\u002B5BHZ3m66H/u7xca1pqHLtAzsHt2H1Oad4="
+      }
+   },
+   "git" : {
+      "submodules" : false
+   },
+   "install" : "make test-deps",
+   "jobs" : {
+      "include" : [
+         {
+            "stage" : "test"
+         },
+         {
+            "before_install" : "true",
+            "install" : "true",
+            "script" : "curl -f https://gist.githubusercontent.com/wakaba/ab553f86cd017e0cb28c6dbb5364b009/raw/travis-merge-job.pl | perl",
+            "stage" : "merge"
+         }
+      ]
+   },
+   "language" : "perl",
+   "notifications" : {
+      "email" : [
+         "wakaba@suikawiki.org"
+      ],
+      "irc" : {
+         "channels" : [
+            "ircs://irc.suikawiki.org:6697#mechanize"
+         ],
+         "use_notice" : true
+      }
+   },
+   "perl" : [
+      "5.26"
+   ],
+   "script" : "make test"
+}
