Experimental nightly rule

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,21 @@
 {
    "jobs" : {
+      "hello": {
+         "environment" : {
+            "CIRCLE_ARTIFACTS" : "/tmp/circle-artifacts"
+         },
+         "machine" : {
+            "enabled" : true
+         },
+         "steps" : [
+            "checkout",
+            {
+               "run" : {
+                  "command" : "echo Hello"
+               }
+            }
+        ]
+      },
       "build" : {
          "environment" : {
             "CIRCLE_ARTIFACTS" : "/tmp/circle-artifacts"
@@ -38,6 +54,25 @@
          "jobs" : [
             "build"
          ]
+      },
+      "nightly": {
+        "jobs": [
+          "hello"
+        ],
+        "triggers": [
+          {
+            "schedule": {
+              "cron": "30 5 * * *",
+              "filters": {
+                "branches": {
+                  "only": [
+                    "staging"
+                  ]
+                }
+              }
+            }
+          }
+        ]
       },
       "version" : 2
    }
