--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,11 @@
             "checkout",
             {
                "run" : {
+                  "command" : "make deps"
+               }
+            },
+            {
+               "run" : {
                   "command" : "make updatenightly"
                }
             },
@@ -36,7 +41,7 @@
          "triggers" : [
             {
                "schedule" : {
-                  "cron" : "30 6 * * *",
+                  "cron" : "40 6 * * *",
                   "filters" : {
                      "branches" : {
                         "only" : [
