--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@
             },
             {
                "deploy" : {
-                  "command" : "git push origin \u002Bnightly"
+                  "command" : "git push origin \u002B`git rev-parse HEAD`:refs/heads/nightly"
                }
             }
          ]
@@ -46,7 +46,7 @@
          "triggers" : [
             {
                "schedule" : {
-                  "cron" : "56 8 * * *",
+                  "cron" : "17 9 * * *",
                   "filters" : {
                      "branches" : {
                         "only" : [
