--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -7827,6 +7827,12 @@
          "application/x-msx-rom" : 1
       }
    },
+   "mtl" : {
+      "mime_type" : "model/mtl",
+      "mime_types" : {
+         "model/mtl" : 1
+      }
+   },
    "mtm" : {
       "mime_type" : "audio/x-mod",
       "mime_types" : {
@@ -8327,10 +8333,11 @@
       }
    },
    "obj" : {
-      "mime_type" : "application/x-tgif",
+      "mime_type" : "model/obj",
       "mime_types" : {
          "application/octet-stream" : 1,
-         "application/x-tgif" : 1
+         "application/x-tgif" : 1,
+         "model/obj" : 1
       }
    },
    "ocl" : {
