--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -8806,7 +8806,7 @@
       }
    },
    "p12" : {
-      "mime_type" : "application/pkcs-12",
+      "mime_type" : "application/x-x509-ca-cert",
       "mime_types" : {
          "application/pkcs-12" : 1,
          "application/x-pkcs-12" : 1,
