--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -1694,6 +1694,12 @@
          "application/vnd.ms-artgalry" : 1
       }
    },
+   "cjs" : {
+      "mime_type" : "application/node",
+      "mime_types" : {
+         "application/node" : 1
+      }
+   },
    "cla" : {
       "mime_type" : "application/vnd.claymore",
       "mime_types" : {
