--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -5964,14 +5964,9 @@
       "mime_type" : "application/pgp-keys",
       "mime_types" : {
          "application/pgp-keys" : 1,
+         "application/vnd.apple.keynote" : 1,
          "application/vnd.xilinx.internal" : 1,
          "application/x-iwork-keynote-sffkey" : 1
-      }
-   },
-   "keynote" : {
-      "mime_type" : "application/vnd.apple.keynote",
-      "mime_types" : {
-         "application/vnd.apple.keynote" : 1
       }
    },
    "kfo" : {
@@ -11942,6 +11937,12 @@
       "mime_type" : "application/vnd.sealedmedia.softseal.pdf",
       "mime_types" : {
          "application/vnd.sealedmedia.softseal.pdf" : 1
+      }
+   },
+   "spdx" : {
+      "mime_type" : "text/spdx",
+      "mime_types" : {
+         "text/spdx" : 1
       }
    },
    "spec" : {
