--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -4582,6 +4582,15 @@
          "application/octet-stream" : 1
       }
    },
+   "hif" : {
+      "mime_type" : "image/heif",
+      "mime_types" : {
+         "image/heic" : 1,
+         "image/heic-sequence" : 1,
+         "image/heif" : 1,
+         "image/heif-sequence" : 1
+      }
+   },
    "hin" : {
       "mime_type" : "x-chemical/x-hin",
       "mime_types" : {
