--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,23 +5,39 @@
          "needs" : [
             "test"
          ],
-         "permissions" : {
-            "contents" : "write"
-         },
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
-               "env" : {
-                  "GITHUB_TOKEN" : "${{ secrets.GITHUB_TOKEN }}"
-               },
-               "run" : "curl -f -s -S --request POST --header \u0022Authorization:token $GITHUB_TOKEN\u0022 --header \u0022Content-Type:application/json\u0022 --data-binary \u0022{\u005C\u0022base\u005C\u0022:\u005C\u0022master\u005C\u0022,\u005C\u0022head\u005C\u0022:\u005C\u0022$GITHUB_SHA\u005C\u0022,\u005C\u0022commit_message\u005C\u0022:\u005C\u0022auto-merge $GITHUB_REF into master\u005C\u0022}\u0022 \u0022https://api.github.com/repos/$GITHUB_REPOSITORY/merges\u0022"
+               "uses" : "actions/checkout@v2",
+               "with" : {
+                  "fetch-depth" : 0,
+                  "ref" : "master",
+                  "ssh-key" : "${{ secrets.GH_GIT_KEY }}"
+               }
+            },
+            {
+               "run" : "git config --global user.name \u0022GitHub Actions\u0022"
+            },
+            {
+               "run" : "git config --global user.email \u0022temp@github.test\u0022"
+            },
+            {
+               "run" : "git fetch --unshallow origin master || git fetch origin master"
+            },
+            {
+               "run" : "git checkout master || git checkout -b master origin/master"
+            },
+            {
+               "run" : "git merge -m \u0022auto-merge $GITHUB_REF ($GITHUB_SHA) into master\u0022 $GITHUB_SHA"
+            },
+            {
+               "run" : "git push origin master"
             },
             {
                "env" : {
-                  "BWALL_HOST" : "${{ secrets.BWALL_HOST }}",
-                  "BWALL_TOKEN" : "${{ secrets.BWALL_TOKEN }}"
+                  "BWALLER_URL" : "${{ secrets.BWALLER_URL }}"
                },
-               "run" : "curl -f https://$BWALL_TOKEN:@$BWALL_HOST/ping/merger.${GITHUB_REF/refs\u005C/heads\u005C//}/${GITHUB_REPOSITORY/\u005C//%2F} -X POST"
+               "run" : "curl -sSf $BWALLER_URL | BWALL_GROUP=merger.${GITHUB_REF/refs\u005C/heads\u005C//} BWALL_NAME=${GITHUB_REPOSITORY} bash"
             }
          ]
       },
@@ -30,23 +46,39 @@
          "needs" : [
             "test"
          ],
-         "permissions" : {
-            "contents" : "write"
-         },
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
-               "env" : {
-                  "GITHUB_TOKEN" : "${{ secrets.GITHUB_TOKEN }}"
-               },
-               "run" : "curl -f -s -S --request POST --header \u0022Authorization:token $GITHUB_TOKEN\u0022 --header \u0022Content-Type:application/json\u0022 --data-binary \u0022{\u005C\u0022base\u005C\u0022:\u005C\u0022master\u005C\u0022,\u005C\u0022head\u005C\u0022:\u005C\u0022$GITHUB_SHA\u005C\u0022,\u005C\u0022commit_message\u005C\u0022:\u005C\u0022auto-merge $GITHUB_REF into master\u005C\u0022}\u0022 \u0022https://api.github.com/repos/$GITHUB_REPOSITORY/merges\u0022"
+               "uses" : "actions/checkout@v2",
+               "with" : {
+                  "fetch-depth" : 0,
+                  "ref" : "master",
+                  "ssh-key" : "${{ secrets.GH_GIT_KEY }}"
+               }
+            },
+            {
+               "run" : "git config --global user.name \u0022GitHub Actions\u0022"
+            },
+            {
+               "run" : "git config --global user.email \u0022temp@github.test\u0022"
+            },
+            {
+               "run" : "git fetch --unshallow origin master || git fetch origin master"
+            },
+            {
+               "run" : "git checkout master || git checkout -b master origin/master"
+            },
+            {
+               "run" : "git merge -m \u0022auto-merge $GITHUB_REF ($GITHUB_SHA) into master\u0022 $GITHUB_SHA"
+            },
+            {
+               "run" : "git push origin master"
             },
             {
                "env" : {
-                  "BWALL_HOST" : "${{ secrets.BWALL_HOST }}",
-                  "BWALL_TOKEN" : "${{ secrets.BWALL_TOKEN }}"
+                  "BWALLER_URL" : "${{ secrets.BWALLER_URL }}"
                },
-               "run" : "curl -f https://$BWALL_TOKEN:@$BWALL_HOST/ping/merger.${GITHUB_REF/refs\u005C/heads\u005C//}/${GITHUB_REPOSITORY/\u005C//%2F} -X POST"
+               "run" : "curl -sSf $BWALLER_URL | BWALL_GROUP=merger.${GITHUB_REF/refs\u005C/heads\u005C//} BWALL_NAME=${GITHUB_REPOSITORY} bash"
             }
          ]
       },
@@ -59,7 +91,10 @@
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
-               "uses" : "actions/checkout@v2"
+               "uses" : "actions/checkout@v2",
+               "with" : {
+                  "ssh-key" : "${{ secrets.GH_GIT_KEY }}"
+               }
             },
             {
                "run" : "mkdir -p $CIRCLE_ARTIFACTS"
@@ -71,6 +106,7 @@
                "run" : "make test"
             },
             {
+               "if" : "${{ always () }}",
                "uses" : "actions/upload-artifact@v3",
                "with" : {
                   "path" : "/tmp/circle-artifacts/test"
